<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ON.MOVE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_spinner_pais">SpinnerPais</string>
    <string name="aeroportos_spinner_prompt">Aeroporto</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="botao_voos">Voos</string>
    <string name="botao_calculoderota">Cálculo de Rota</string>
    <string name="botao_serviços">Serviços</string>
    <string name="botao_contactos">Contactos</string>
    <string name="botao_sobre">Sobre</string>
    <string name="title_activity_gpsalert">GPSAlertActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main_activity2">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_move_me">MoveMeActivity</string>
    <string name="title_activity_taxis">TaxisActivity</string>
    <string name="title_activity_header_fragment">HeaderFragment</string>
    <string name="calculo_de_rota">Cálculo de Rota</string>
    <string name="transportes_coletivos">Transportes Coletivos</string>
    <string name="taxis">Táxis</string>
    <string name="title_activity_voos">VoosActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_tab_partidas">TabPartidasActivity</string>
    <string name="title_activity_tab_chegadas">TabChegadasActivity</string>
    <string name="title_activity_voo_info">VooInfoActivity</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_footer">FooterActivity</string>
    <string name="title_activity_other_services">OtherServicesActivity</string>
    <string name="title_activity_smokers_area">SmokersAreaActivity</string>
    <string name="botao_mapa_aeroporto">Mapa Aeroporto</string>
    <string name="botao_lojas">Lojas</string>
    <string name="botao_restaurantes">Restaurantes</string>
    <string name="botao_outros_servicos">Outros Serviços</string>
    <string name="botao_contactos_aeroporto">Contactos Aeroporto</string>
    <string name="botao_perdidos_achados">Perdidos e Achados</string>
    <string name="botao_posto_socorro">Posto de Socorro</string>
    <string name="botao_WC">WCs</string>
    <string name="botao_zona_fumadores">Zona Fumadores</string>
    <string name="botao_apoio_cliente">Apoio ao Cliente</string>
    <string name="botao_parking">Parking</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="mapa">Mapa</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_stores">StoresActivity</string>
    <string name="lojas">Lojas</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="paraoaeroporto">Para o Aeroporto</string>
    <string name="apartirdoaeroporto">A Partir do Aeroporto</string>
    <string name="title_activity_routes">RoutesMenuActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_plants">PlantsActivity</string>
    <string name="title_activity_plant">PlantActivity</string>
    <string name="title_activity_locations">LocationsActivity</string>
    <string name="title_activity_stores2">StoresActivity2</string>
    <string name="title_activity_store2">StoreActivity2</string>
    <string name="title_activity_netalert">NetAlertActivity</string>

</resources>
