<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="12">

    <fragment
        android:name="com.moksie.onthemove.fragments.HeaderFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_header"
        android:id="@+id/menu_header" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/botao_voos"
        android:id="@+id/voos_button"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="20dp"
        android:typeface="normal"
        android:gravity="center|left"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/botao_calculoderota"
        android:id="@+id/moveme_button"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="20dp"
        android:typeface="normal"
        android:gravity="center|left"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/botao_serviços"
        android:id="@+id/servicos_button"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="20dp"
        android:typeface="normal"
        android:gravity="center|left"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/botao_contactos"
        android:id="@+id/contactos_button"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="20dp"
        android:typeface="normal"
        android:gravity="center|left"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/botao_sobre"
        android:id="@+id/sobre_button"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="20dp"
        android:typeface="normal"
        android:gravity="center|left"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <fragment
        android:name="com.moksie.onthemove.fragments.FooterFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_footer"
        android:id="@+id/menu_footer"/>

</LinearLayout>