<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="12">

    <fragment
        android:name="com.moksie.onthemove.fragments.HeaderFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_header"
        android:id="@+id/move_me_header" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="10">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/title_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:text="@string/botao_contactos"
                android:id="@+id/textView" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/botao_contactos_aeroporto"
            android:id="@+id/contacts_aeroporto"
            android:drawableLeft="@drawable/ic_icon_contactos_aeroporto"
            android:drawablePadding="20dp"
            android:typeface="normal"
            android:gravity="center|left"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/botao_perdidos_achados"
            android:id="@+id/contacts_perdidos_achados"
            android:drawableLeft="@drawable/ic_icon_perdidos_achados"
            android:drawablePadding="20dp"
            android:typeface="normal"
            android:gravity="center|left"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/botao_posto_socorro"
            android:id="@+id/contacts_posto_socorro"
            android:drawableLeft="@drawable/ic_icon_posto_socorros"
            android:drawablePadding="20dp"
            android:typeface="normal"
            android:gravity="center|left"
            android:textAppearance="@android:style/TextAppearance.Large" />

    </LinearLayout>

    <fragment
        android:name="com.moksie.onthemove.fragments.FooterFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_footer"
        android:id="@+id/contacts_footer"/>

</LinearLayout>